--- a/Day2Assignment/2Assignment.css
+++ b/Day2Assignment/2Assignment.css
@@ -1,5 +1,5 @@
 .bg-container{
-    background-image: url("bg2.jpg");
+    background-image: url("bluebeach.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -39,11 +39,14 @@
 
 .popup {
   margin: 70px auto;
+  margin-top:0px;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
-  width: 50%;
+  width: 40%;
+  margin-top:1.5%;
   position: relative;
+  background-color:  #ffccff;
 }
 
 .popup h2 {
@@ -72,5 +75,14 @@
     border-width:2px;
     border-radius:3px;
     border-color:black;
+}
+.button1{
+  background-color:#80aaff;
+  width:100px;
+  color:black;
+  font-family:"Roboto";
+  font-size:15px;
+  border-radius:3px;
+
 }
 
