--- a/NodeJsClass/firstapp1/src/app/about/about.component.css
+++ b/NodeJsClass/firstapp1/src/app/about/about.component.css
@@ -1,18 +1,32 @@
-.image{
-    width:200px;
-    height:150px;
+.about{
+    height: 220px;
+    background-color: rgb(46, 46, 67);
+    position: relative;
 }
-.container{
-    background-color: antiquewhite;
-    padding:10px;
-    text-align:center;
-    display:flex;
-    flex-direction: row;
 
-}
-`
 .title{
-    font-family: "Roboto";
-    font-size:30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: White;
+    padding: 20px;
+}
 
+.content {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    color: lightgrey;
+    padding: 20px;
+    width: 600px;
+}
+
+.image{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+
+.image img{
+    height: 100%;
+    width: 100%;
 }
