--- a/NodeJsClass/firstapp1/src/app/about/about.component.html
+++ b/NodeJsClass/firstapp1/src/app/about/about.component.html
@@ -1,13 +1,13 @@
-<div class="container">
-    <div>
-    <h1 class="title">Prabhas</h1>
-    <p>Uppalapati Venkata Suryanarayana Prabhas Raju (born 23 October 1979), 
-        known mononymously as Prabhas ([pɾabʱaːs]), is an Indian actor who works predominantly
-         in Telugu cinema. One of the highest-paid actors in Indian cinema,[4] Prabhas has featured in Forbes India's Celebrity 100 list
-          three times since 2015 based on his income and popularity.[5][6][7] He has received seven Filmfare Awards South nominations and is a
-           recipient of a Nandi Award and a SIIMA Award.</p>
-        </div>
-        <div>
-    <img src="http://localhost//prabha.jpg" class="image">
-</div>
+
+<div class="about">
+    <div class="title">
+         <h3> About Us </h3>
+    </div>
+    <div class="content">
+          {{content}}
+          <li *ngFor="let x of servicelist">{{x}}</li>
+    </div>
+    <div class="image">
+        <img src="http://localhost/prabha.jpg">
+    </div>
 </div>
