--- a/NodeJsClass/firstapp1/src/app/service-box/service-box.component.css
+++ b/NodeJsClass/firstapp1/src/app/service-box/service-box.component.css
@@ -1,16 +1,19 @@
 .service-box{
-    height:200px;
-    width:320px;
-    margin:20px;
-    box-sizing:border-box;
-    padding:10px;
-    background-color:aquamarine;
-    color:black;
-    float:left;
+    height:250px;
+    width: 320px;
+    margin: 20px;
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: rgb(38, 38, 70);
+    color: white;
+    float: left;
 }
+
 h3{
-    font-family:Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 p{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: gray;
 }
