--- a/NodeJsClass/firstapp1/src/app/service-box/service-box.component.html
+++ b/NodeJsClass/firstapp1/src/app/service-box/service-box.component.html
@@ -1,10 +1,6 @@
 <div class="service-box">
-    <h3>Service Title </h3>
-    <P>
-        service description service description
-        service description service description
-        service description service description 
-        service description service description
-        service description service description
-    </P>
-</div>
+    <h3> {{title}}</h3>
+    <p>
+        {{description}}
+    </p>
+  </div>
