--- a/AssignmentApril24/src/app/complaint/complaint.component.css
+++ b/AssignmentApril24/src/app/complaint/complaint.component.css
@@ -2,37 +2,61 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     float: left;
-    width: 450px;
+    width: 300px;
     margin: 5px;
     margin-right: 50px;
 }
 
 .formbox h5{
     margin: 5px;
+    color:black;
+    font-family:"Roboto";
+    font-size:17px;
 }
 
 .formbox input[type="text"],.formbox input[type="email"]{
     border: 2px solid white;
-    width: 400px;
+    width: 300px;
     margin: 10px;
     height: 30px;
-    padding: 10px;
+    padding: 7px;
+    color:balck;
 }
 textarea{
-    width: 400px;
-    height: 250px;
+    width: 300px;
+    height: 100px;
     border: 2px solid white;
 }
 
 #form{
     margin-top: 30px;
     padding: 50px;
-    background-color: rgb(53, 51, 51);
+    background-color:  #80ffe5;
     overflow: hidden;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width:45%;
+    border-radius:20px;
+    margin-left: 200px;
+    
+}
+.form2{
+    display :flex;
+    flex-direction: column;
 }
 
 li{
     color: darkred;
+}
+.buttton1{
+    width:80px;
+    padding:4px;
+    color:black;
+    background-color:#ffccff;
+    font-family:"Roboto";
+    font-weight:500;
+    border-style:none;
+    border-width:0px;
+    border-radius: 5px;
+
 }
