--- a/AssignmentApril24/src/app/complaint/complaint.component.html
+++ b/AssignmentApril24/src/app/complaint/complaint.component.html
@@ -1,5 +1,5 @@
 <div id="form">
-    <div style="overflow: hidden;">
+    <div style="overflow: hidden;" class="form2">
         <div class="formbox">
             <h5>First Name</h5>
             <input type="text" [(ngModel)]="fname">*
@@ -18,6 +18,6 @@
             <li *ngFor="let x of errors">{{x}}</li>
         </ul>
     </div>
-    <div style="margin:30px;"><button class="btn btn-secondary" (click)="submit()">Submit Enquiry</button></div>
+    <div style="margin:30px;"><button class="buttton1 btn btn-primary" (click)="submit()">Submit </button></div>
     </div>
     
