--- a/AssignmentApril24/src/app/home/product/product.component.html
+++ b/AssignmentApril24/src/app/home/product/product.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/productdetails/{{product.id}}">
 <div class="product-box">
     <div class="image-holder">
         <img src="http://localhost/{{product.image}}">
@@ -7,3 +8,5 @@
         <p>{{product.price | price}}</p>
     </div>
 </div>
+</a>
+
